--- a/index.html/index.html
+++ b/index.html/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="css/formal.css" />
-    <script src="js/swiper-bundle.min.js"></script>
-    <script src="js/formal.js"></script>
+    <link rel="stylesheet" href="swiper-bundle.min.css" />
+    <link rel="stylesheet" href="formal.css" />
+    <script src="swiper-bundle.min.js"></script>
+    <script src="formal.js"></script>
   </head>
   <body>
     <header>
